# e-cash-app

./: .gitignore  CLAUDE.md  PR.md  build-apk-manual.sh  build-apk.sh  debug.md  final-build.sh  flake.nix  improvements.md  insights.md  invoice.txt  justfile  prompt.txt  pubspec.yaml  setup-flutter-build.sh  todo.txt
android/: build.gradle.kts  gradle-init-patch-binaries.gradle  gradle.properties  settings.gradle.kts  test-gradle.gradle
android/app/: build.gradle.kts
android/app/src/main/res/xml/: network_security_config.xml
lib/: dashboard.dart  db.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  lib.freezed.dart  multimint.dart  number_pad.dart  onchain_receive.dart  onchain_send.dart  scan.dart  success.dart
lib/screens/: dashboard.dart
lib/widgets/: transaction_detail_modal.dart  transaction_item.dart  transactions_list.dart
rust/carbine_fedimint/: Cargo.toml
rust/carbine_fedimint/src/: db.rs  frb_generated.rs  lib.rs  multimint.rs
rust/ecashapp/: Cargo.toml
todo/: payment-specific-details.txt
