[package]
name = "ecashapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoin-payment-instructions = { version = "0.4.0", features = [ "http" ]}
fedimint-api-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-bip39 = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-core = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-derive-secret = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-rocksdb = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-ln-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-lnv2-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-lnv2-common = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-ln-common = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-meta-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-mint-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
fedimint-wallet-client = { git = "https://github.com/bradleystachurski/fedimint", rev = "8184e2a8c397931ae259c3609baf673239aecdcd" }
flutter_rust_bridge = "=2.9.0"
futures-timer = "3.0.3"
futures-util = "0.3.30"
lightning-invoice = { version = "0.33.2", features = ["std"] } # Needs to match fedimint's lightning-invoice
lnurl-rs = { version = "0.9.0", default-features = false }
nostr-sdk = { version = "0.42.0", features = [ "nip04" ]}
regex = "1.11.1"
reqwest = { version = "0.12.18", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}
